--- a/resources/public/controls/Grid/Grid.css
+++ b/resources/public/controls/Grid/Grid.css
@@ -1,24 +1,24 @@
-table.list > thead > tr > th {
+table.grid > thead > tr > th {
     border-right: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
 }
-table.list > thead > tr > th:last-child {
+table.grid > thead > tr > th:last-child {
     border-right: 0px solid lightgrey;
     border-bottom: 1px solid lightgrey;
 }
 
-table.list > tbody > tr > td {
+table.grid > tbody > tr > td {
     border-right: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
 }
-table.list > tbody > tr > td:last-child {
+table.grid > tbody > tr > td:last-child {
     border-right: 0px solid lightgrey;
     border-bottom: 1px solid lightgrey;
 }
-table.list > tbody > tr:hover {
+table.grid > tbody > tr:hover {
     background-color: lightgreen;
     cursor: pointer;
 }
-table.list > tbody > tr.selected {
+table.grid > tbody > tr.selected {
     background-color: lightblue;
 }
