--- a/resources/public/controls/Grid/Grid.css
+++ b/resources/public/controls/Grid/Grid.css
@@ -10,10 +10,21 @@ table.grid > thead > tr > th:last-child {
 table.grid > tbody > tr > td {
     border-right: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
+    /*
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; 
+    */
 }
 table.grid > tbody > tr > td:last-child {
     border-right: 0px solid lightgrey;
     border-bottom: 1px solid lightgrey;
+}
+table.grid > tbody > tr > td > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 300px;
 }
 table.grid > tbody > tr:hover {
     background-color: lightgreen;
