--- a/resources/public/controls/views/DetailView/DetailView.html
+++ b/resources/public/controls/views/DetailView/DetailView.html
@@ -1,4 +1,4 @@
-<div class="view-panel" style="position: static;">
+<div class="detailview-panel">
   <div class="object-operations"></div>
   <div class="object-detail"></div>
 </div>
