--- a/resources/public/controls/views/GridView/GridView.html
+++ b/resources/public/controls/views/GridView/GridView.html
@@ -1,4 +1,4 @@
-<div class="view-panel" style="position: static;">
+<div class="gridview-panel">
   <div class="object-operations"></div>
   <div class="object-list">
     <div><a href="#"></a></div>
