--- a/resources/public/core/main.css
+++ b/resources/public/core/main.css
@@ -1,9 +1,11 @@
 body {
   position:absolute;
+  /*
   margin:0px;
   padding:0px;
-  top:5px;
-  left:5px;
-  bottom:10px;
-  right:10px;
+  */
+  top:0px;
+  left:0px;
+  bottom:0px;
+  right:0px;
 }
