Fixed extension operations bugs.

--- a/resources/public/controls/views/FileView/FileView.html
+++ b/resources/public/controls/views/FileView/FileView.html
@@ -1,6 +1,6 @@
 <div class="fileview-panel">
   <div class="file-operations"></div>
   <div class="file-contents">
-    <textarea>{{:file_contents}}</textarea>
+    <textarea></textarea>
   </div>
 </div>
