Added javascript libraries to git repository. Modified Grid to use w2ui grid control.

--- a/resources/public/data/Style/Grid.css
+++ b/resources/public/data/Style/Grid.css
@@ -44,3 +44,14 @@ table.grid > tbody > tr:hover {
 table.grid > tbody > tr.selected {
     background-color: lightblue;
 }
+
+div.grid {
+/*
+  position:absolute;
+  top:0px;
+  left:0px;
+  bottom:0px;
+  right:0px;
+ */
+  height: 100%;
+}
