--- a/resources/public/data/Style/View/MenuView.css
+++ b/resources/public/data/Style/View/MenuView.css
@@ -11,5 +11,5 @@ div.menuview-panel > div.menu-list {
   left:0px;
   bottom:0px;
   right:0px;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
 }
