--- a/resources/public/core/Control/View/ListView.css
+++ b/resources/public/core/Control/View/ListView.css
@@ -11,5 +11,5 @@ div.listview-panel > div.object-list {
   left:0px;
   bottom:0px;
   right:0px;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
 }
