--- a/resources/public/core/reset-w2ui.css
+++ b/resources/public/core/reset-w2ui.css
@@ -17,3 +17,8 @@
 .w2ui-popup {
   font-family: Verdana,"游ゴシック",YuGothic,"ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",Meiryo,sans-serif;
 }
+.w2ui-grid .w2ui-toolbar-search {
+  width:160px;
+  margin-right:3px;
+  margin-left:3px;
+}
