--- a/resources/public/core/main.css
+++ b/resources/public/core/main.css
@@ -1,13 +1,10 @@
 body {
   position:absolute;
-  /*
-  margin:0px;
-  padding:0px;
-  */
   top:0px;
   left:0px;
   bottom:0px;
   right:0px;
+  font-family: Verdana,"游ゴシック",YuGothic,"ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",Meiryo,sans-serif;
 }
 
 .ui-front {
