--- a/resources/public/core/main.css
+++ b/resources/public/core/main.css
@@ -29,3 +29,26 @@ body {
 .div-button:hover {
   background-color: #dddddd;
 }
+
+.tames-field-label {
+  display: block;
+  float: left;
+  margin-top: 7px;
+  margin-bottom: 3px;
+  width: 120px;
+  padding: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: right;
+  min-height: 20px;
+  color: #666;
+}
+.tames-field-form {
+  /* do not include width */
+  margin-bottom: 3px;
+  margin-left: 128px;
+  padding: 3px;
+  min-height: 28px;
+  float: none;
+}
