Implement auto update resource files function.

--- a/resources/public/core/Control/View/MenuView.css
+++ b/resources/public/core/Control/View/MenuView.css
@@ -17,6 +17,7 @@ div.menuview-item {
   display:inline-block;
   width:120px;
   height:120px;
+  padding:10px;
 }
 div.menuview-item > div > i {
   width:100px;
