Modified some css file related to font setting. Improved css loading system.

--- a/resources/core/Control/View/MenuView.css
+++ b/resources/core/Control/View/MenuView.css
@@ -22,6 +22,7 @@ div.menuview-item {
 div.menuview-item > div > i {
   width:100px;
   height:70px;
+  padding:10px;
 }
 span.menuview-item-caption {
   text-align:center;
