--- a/resources/core/Control/View/MenuView.css
+++ b/resources/core/Control/View/MenuView.css
@@ -19,6 +19,12 @@ div.menuview-item {
   height:120px;
   padding:10px;
 }
+div.menuview-item > div {
+  transition: background-color 200ms;
+}
+div.menuview-item > div:hover {
+  background-color:#ffffff;
+}
 div.menuview-item > div > i {
   width:100px;
   height:70px;
