--- a/resources/core/Control/View/MenuView.css
+++ b/resources/core/Control/View/MenuView.css
@@ -21,9 +21,10 @@ div.menuview-item {
 }
 div.menuview-item > div {
   transition: background-color 200ms;
+  background-color:#ffffff;
 }
 div.menuview-item > div:hover {
-  background-color:#ffffff;
+  background-color:#eeffee;
 }
 div.menuview-item > div > i {
   width:100px;
